--- a/hermit/src/main/webapp/WEB-INF/web.xml
+++ b/hermit/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>hermit</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<display-name>hermit</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>MemberServlet</servlet-name>
+		<servlet-class>com.hermit.iii.member.controller.MemberServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MemberServlet</servlet-name>
+		<url-pattern>/member.do</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>SMSServlet</servlet-name>
+		<servlet-class>com.hermit.iii.sms.controller.SMSServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SMSServlet</servlet-name>
+		<url-pattern>/sms.do</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>IdentityServlet</servlet-name>
+		<servlet-class>com.hermit.iii.identity.controller.IdentityServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>IdentityServlet</servlet-name>
+		<url-pattern>/identity.do</url-pattern>
+	</servlet-mapping>
 </web-app>
