--- a/hermit/src/main/webapp/WEB-INF/web.xml
+++ b/hermit/src/main/webapp/WEB-INF/web.xml
@@ -33,4 +33,20 @@
     <servlet-name>IdentityServlet</servlet-name>
     <url-pattern>/identity.do</url-pattern>
   </servlet-mapping>
+  <filter>
+  	<filter-name>QandAFilter</filter-name>
+  	<filter-class>com.hermit.iii.qanda.filter.QAndAFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>QandAFilter</filter-name>
+  	<url-pattern>/QAndA/QAndA.jsp</url-pattern>
+  </filter-mapping>
+   <filter-mapping>
+  	<filter-name>QandAFilter</filter-name>
+  	<url-pattern>/QAndA/AAndQ.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+  	<filter-name>QandAFilter</filter-name>
+  	<url-pattern>/memberbackstage/mem_back_qanda.jsp</url-pattern>
+  </filter-mapping>
 </web-app>
