--- a/hermit/src/main/webapp/WEB-INF/web.xml
+++ b/hermit/src/main/webapp/WEB-INF/web.xml
@@ -37,8 +37,15 @@
 		<servlet-name>IdentityServlet</servlet-name>
 		<url-pattern>/identity.do</url-pattern>
 	</servlet-mapping>
+	<filter>
+		<filter-name>MemberLoginFilter</filter-name>
+		<filter-class>com.hermit.iii.login.controller.MemberLoginFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>MemberLoginFilter</filter-name>
+		<url-pattern>/memberbackstage/*</url-pattern>
+	</filter-mapping>
 	
-
 	<filter>
 		<filter-name>EmpLoginFilter</filter-name>
 		<filter-class>com.hermit.iii.login.controller.EmpLoginFilter</filter-class>
@@ -89,3 +96,6 @@
 		<url-pattern>/memberbackstage/mem_back_qanda.jsp</url-pattern>
 	</filter-mapping>
 </web-app>
+
+	
+	
