--- a/hermit/src/main/webapp/WEB-INF/web.xml
+++ b/hermit/src/main/webapp/WEB-INF/web.xml
@@ -99,6 +99,36 @@
 		<filter-name>QandAFilter</filter-name>
 		<url-pattern>/memberbackstage/mem_back_qanda.jsp</url-pattern>
 	</filter-mapping>
+	
+	<!-- spring MVC 補充【start】 -->
+	<servlet>
+		<servlet-name>dispatcher</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring-servlet.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<filter>
+		<filter-name>setCharacterEncoding</filter-name>
+		<filter-class>com.hermit.iii.util.SetCharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>setCharacterEncoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- spring MVC 補充【end】 -->
+
 </web-app>
 
 	
