--- a/hermit/src/main/webapp/WEB-INF/web.xml
+++ b/hermit/src/main/webapp/WEB-INF/web.xml
@@ -1,135 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	version="3.1">
-	<display-name>hermit</display-name>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-	<servlet>
-		<servlet-name>MemberServlet</servlet-name>
-		<servlet-class>com.hermit.iii.member.controller.MemberServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>MemberServlet</servlet-name>
-		<url-pattern>/member.do</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>SMSServlet</servlet-name>
-		<servlet-class>com.hermit.iii.sms.controller.SMSServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>SMSServlet</servlet-name>
-		<url-pattern>/sms.do</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>IdentityServlet</servlet-name>
-		<servlet-class>com.hermit.iii.identity.controller.IdentityServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>IdentityServlet</servlet-name>
-		<url-pattern>/identity.do</url-pattern>
-	</servlet-mapping>
-	<filter>
-		<filter-name>MemberLoginFilter</filter-name>
-		<filter-class>com.hermit.iii.login.controller.MemberLoginFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>MemberLoginFilter</filter-name>
-		<url-pattern>/memberbackstage/*</url-pattern>
-	</filter-mapping>
-	
-	<filter>
-		<filter-name>EmpLoginFilter</filter-name>
-		<filter-class>com.hermit.iii.login.controller.EmpLoginFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>EmpLoginFilter</filter-name>
-		<url-pattern>/mention/mentionIndex.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>EmpLoginFilter</filter-name>
-		<url-pattern>/House/House_management.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>EmpLoginFilter</filter-name>
-		<url-pattern>/Lease/Lease.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>EmpLoginFilter</filter-name>
-		<url-pattern>/calendar/calendar.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>EmpLoginFilter</filter-name>
-		<url-pattern>/management/manage_member_page.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>EmpLoginFilter</filter-name>
-		<url-pattern>/infraction/infraction.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>EmpLoginFilter</filter-name>
-		<url-pattern>/wetalk/WebSocketBackground.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>EmpLoginFilter</filter-name>
-		<url-pattern>/QAndA/backQA.jsp</url-pattern>
-	</filter-mapping>
-	<!-- Q&A用 -->
-	<filter>
-		<filter-name>QandAFilter</filter-name>
-		<filter-class>com.hermit.iii.qanda.filter.QAndAFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>QandAFilter</filter-name>
-		<url-pattern>/QAndA/QAndA.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>QandAFilter</filter-name>
-		<url-pattern>/QAndA/AAndQ.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>QandAFilter</filter-name>
-		<url-pattern>/memberbackstage/mem_back_qanda.jsp</url-pattern>
-	</filter-mapping>
-	
-	<!-- spring MVC 補充【start】 -->
-	<servlet>
-		<servlet-name>dispatcher</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring-servlet.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-
-	<filter>
-		<filter-name>setCharacterEncoding</filter-name>
-		<filter-class>com.hermit.iii.util.SetCharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>setCharacterEncoding</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<!-- spring MVC 補充【end】 -->
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+  <display-name>hermit</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>MemberServlet</servlet-name>
+    <servlet-class>com.hermit.iii.member.controller.MemberServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MemberServlet</servlet-name>
+    <url-pattern>/member.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>SMSServlet</servlet-name>
+    <servlet-class>com.hermit.iii.sms.controller.SMSServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SMSServlet</servlet-name>
+    <url-pattern>/sms.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>IdentityServlet</servlet-name>
+    <servlet-class>com.hermit.iii.identity.controller.IdentityServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IdentityServlet</servlet-name>
+    <url-pattern>/identity.do</url-pattern>
+  </servlet-mapping>
+  <filter>
+    <filter-name>MemberLoginFilter</filter-name>
+    <filter-class>com.hermit.iii.login.controller.MemberLoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>MemberLoginFilter</filter-name>
+    <url-pattern>/memberbackstage/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>EmpLoginFilter</filter-name>
+    <filter-class>com.hermit.iii.login.controller.EmpLoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/mention/mentionIndex.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/House/House_management.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/Lease/Lease.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/calendar/calendar.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/management/manage_member_page.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/infraction/infraction.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/wetalk/WebSocketBackground.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/QAndA/backQA.jsp</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>QandAFilter</filter-name>
+    <filter-class>com.hermit.iii.qanda.filter.QAndAFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>QandAFilter</filter-name>
+    <url-pattern>/QAndA/QAndA.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>QandAFilter</filter-name>
+    <url-pattern>/QAndA/AAndQ.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>QandAFilter</filter-name>
+    <url-pattern>/memberbackstage/mem_back_qanda.jsp</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <servlet-name>dispatcher</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/spring-servlet.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>dispatcher</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <filter>
+    <filter-name>setCharacterEncoding</filter-name>
+    <filter-class>com.hermit.iii.util.SetCharacterEncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>setCharacterEncoding</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
-
-	
-	
