派工修復 + 派工新增二次確認 + 部分業務組別code

--- a/hermit/src/main/webapp/WEB-INF/web.xml
+++ b/hermit/src/main/webapp/WEB-INF/web.xml
@@ -63,6 +63,22 @@
   </filter-mapping>
   <filter-mapping>
     <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/DispatchList/DispatchList.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/DispatchList/updateDispatchList.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/DispatchList/InsertDispatchList.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
+    <url-pattern>/DispatchList/queryDispatchList.jsp</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>EmpLoginFilter</filter-name>
     <url-pattern>/management/manage_member_page.jsp</url-pattern>
   </filter-mapping>
   <filter-mapping>
