--- a/hermit/src/main/webapp/WEB-INF/web.xml
+++ b/hermit/src/main/webapp/WEB-INF/web.xml
@@ -134,4 +134,20 @@
     <filter-name>setCharacterEncoding</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  	<error-page>
+		<error-code>404</error-code>
+		<location>/systemBusy.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>405</error-code>
+		<location>/systemBusy.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>406</error-code>
+		<location>/systemBusy.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/systemBusy.jsp</location>
+	</error-page>
 </web-app>
